Fixed modal border-radius not show

--- a/resources/sass/core/modals.scss
+++ b/resources/sass/core/modals.scss
@@ -6,6 +6,7 @@
     transition: all 340ms !important;
   }
   .modal-content {
+    overflow: hidden;
     border-radius: $border-radius;
     box-shadow: none;
   }
